@@ -1,3 +1,9 @@
+2008-06-03  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.XmlEditor/XmlEditorService.cs: Use the OnDestroyed event
+	  instead of Dispose, since with the latest changes in gtk#, Dispose
+	  is not called anymore when a widget is destroyed.
+
 2008-06-02  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.XmlEditor.mds: Some fixes in project files.
